--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <script src="index.js"></script>
+    <title>Fuzzy Memory</title>
   </head>
   <body>
 
