--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <script src="index.js"></script>
+    <script src="my-fantasic-javascript-code.js"></script>
     <title>Fuzzy Memory</title>
   </head>
   <body>
