--- a/index.html
+++ b/index.html
@@ -2,12 +2,24 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <script src="my-fantasic-javascript-code.js"></script>
+    <meta name="viewport" content="width=device-width">
+    <script src="my-fantastic-js-code.js"></script>
+
     <title>Fuzzy Memory</title>
   </head>
   <body>
 
-    <div id="container"> </div>
+    <div id="cards">
+    	<img id="card1" src="images/back.png">
+    	<img id="card2" src="images/back.png">
+    	<img id="card3" src="images/back.png">
+    	<img id="card4" src="images/back.png">
+      <img id="card5" src="images/back.png">
+      <img id="card6" src="images/back.png">
+      <img id="card7" src="images/back.png">
+      <img id="card8" src="images/back.png">
+    </div>
 
   </body>
+
 </html>
