Added all 16 cards

--- a/index.html
+++ b/index.html
@@ -3,21 +3,31 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
+
     <script src="my-fantastic-js-code.js"></script>
+    <link rel="stylesheet" href="main.css" type="text/css">
 
     <title>Fuzzy Memory</title>
   </head>
   <body>
 
     <div id="cards">
-    	<img id="card1" src="images/back.png">
-    	<img id="card2" src="images/back.png">
+    	<img id="card1" onclick="showCard()" src="images/back.png">
+    	<img id="card1" onclick="showCard()" src="images/back.png">
     	<img id="card3" src="images/back.png">
     	<img id="card4" src="images/back.png">
       <img id="card5" src="images/back.png">
       <img id="card6" src="images/back.png">
       <img id="card7" src="images/back.png">
       <img id="card8" src="images/back.png">
+      <img id="card9" src="images/back.png">
+      <img id="card10" src="images/back.png">
+      <img id="card11" src="images/back.png">
+      <img id="card12" src="images/back.png">
+      <img id="card13" src="images/back.png">
+      <img id="card14" src="images/back.png">
+      <img id="card15" src="images/back.png">
+      <img id="card16" src="images/back.png">
     </div>
 
   </body>
