Replaced body with body onload towards fisherYates()

--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
 
     <title>Fuzzy Memory</title>
   </head>
-  <body>
+
 
     <div class="container">
+      <body onload="fisherYates()">
 
+      </body>
     </div>
 
-  </body>
+
 
 </html>
