Created a table that holds all the cards

--- a/index.html
+++ b/index.html
@@ -13,7 +13,36 @@
 
     <div class="container">
       <body onload="fisherYates()">
+        <table>
+          <div id="column">
+            <img scr="images/back.png" onclick="clicks(0)">
+            <img scr="images/back.png" onclick="clicks(1)">
+            <img scr="images/back.png" onclick="clicks(2)">
+            <img scr="images/back.png" onclick="clicks(3)">
+          </div>
 
+          <div id="column">
+            <img scr="images/back.png" onclick="clicks(4)">
+            <img scr="images/back.png" onclick="clicks(5)">
+            <img scr="images/back.png" onclick="clicks(6)">
+            <img scr="images/back.png" onclick="clicks(7)">
+          </div>
+
+          <div id="column">
+            <img scr="images/back.png" onclick="clicks(8)">
+            <img scr="images/back.png" onclick="clicks(9)">
+            <img scr="images/back.png" onclick="clicks(10)">
+            <img scr="images/back.png" onclick="clicks(11)">
+          </div>
+
+          <div id="column">
+            <img scr="images/back.png" onclick="clicks(12)">
+            <img scr="images/back.png" onclick="clicks(13)">
+            <img scr="images/back.png" onclick="clicks(14)">
+            <img scr="images/back.png" onclick="clicks(15)">
+          </div>
+
+        </table>
       </body>
     </div>
 
