--- a/index.html
+++ b/index.html
@@ -11,43 +11,40 @@
   </head>
 
 
-    <div class="container">
-      <body onload="fisherYates()">
-        <table>
-          <div id="column">
-            <img scr="images/back.png" onclick="clicks(0)">
-            <img scr="images/back.png" onclick="clicks(1)">
-            <img scr="images/back.png" onclick="clicks(2)">
-            <img scr="images/back.png" onclick="clicks(3)">
-          </div>
 
-          <div id="column">
-            <img scr="images/back.png" onclick="clicks(4)">
-            <img scr="images/back.png" onclick="clicks(5)">
-            <img scr="images/back.png" onclick="clicks(6)">
-            <img scr="images/back.png" onclick="clicks(7)">
-          </div>
+  <div id="container">
+  <body onload="fisherYates()">
+    <table>
+      <div id="column">
+        <img onclick="clicks(0)" src="images/back.png">
+        <img onclick="clicks(1)" src="images/back.png">
+        <img onclick="clicks(2)" src="images/back.png">
+        <img onclick="clicks(3)" src="images/back.png">
+      </div>
+      <div id="column">
+        <img onclick="clicks(4)" src="images/back.png">
+        <img onclick="clicks(5)" src="images/back.png">
+        <img onclick="clicks(6)" src="images/back.png">
+        <img onclick="clicks(7)" src="images/back.png">
+      </div>
+      <div id="column">
+        <img onclick="clicks(8)" src="images/back.png">
+        <img onclick="clicks(9)" src="images/back.png">
+        <img onclick="clicks(10)" src="images/back.png">
+        <img onclick="clicks(11)" src="images/back.png">
+      </div>
+      <div id="column">
+        <img onclick="clicks(12)" src="images/back.png">
+        <img onclick="clicks(13)" src="images/back.png">
+        <img onclick="clicks(14)" src="images/back.png">
+        <img onclick="clicks(15)" src="images/back.png">
+      </div>
+    </table>
+    <p id="win"></p>
+  </body>
 
-          <div id="column">
-            <img scr="images/back.png" onclick="clicks(8)">
-            <img scr="images/back.png" onclick="clicks(9)">
-            <img scr="images/back.png" onclick="clicks(10)">
-            <img scr="images/back.png" onclick="clicks(11)">
-          </div>
+  </div>
 
-          <div id="column">
-            <img scr="images/back.png" onclick="clicks(12)">
-            <img scr="images/back.png" onclick="clicks(13)">
-            <img scr="images/back.png" onclick="clicks(14)">
-            <img scr="images/back.png" onclick="clicks(15)">
-          </div>
-
-        </table>
-
-        <p id="win"></p>
-
-      </body>
-    </div>
 
 
 
