--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
       </div>
     </table>
     <p id="win"></p>
+    <input type="button" id="reset"  value="Nytt spel" style="clear:left;" onclick="resetGame()">
   </body>
 
   </div>
