Changed the directory for a function

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       </div>
     </table>
     <p id="win"></p>
-    <input type="button" id="reset"  value="Nytt spel" style="clear:left;" onclick="resetGame()">
+    <input type="button" id="reset"  value="Nytt spel" style="clear:left;" onclick="restart()">
   </body>
 
   </div>
