--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
       </div>
     </table>
     <p id="win"></p>
-    <input type="button" id="reset"  value="Nytt spel" style="clear:left;" onclick="restart()">
+	<input type="button" id="reset"  value="Nytt spel" style="clear:left;" onclick="resetGame()">
+
   </body>
 
   </div>
